--- a/demo-frontend/package.json
+++ b/demo-frontend/package.json
@@ -3,19 +3,150 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/jest": "23.3.11",
+    "@types/node": "10.12.18",
+    "@types/react": "16.7.18",
+    "@types/react-dom": "16.0.11",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-plugin-react": "^7.12.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.2"
+    "react-scripts": "2.1.2",
+    "tslint": "^5.12.0",
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-config-prettier": "^1.17.0",
+    "tslint-eslint-rules": "^5.4.0",
+    "tslint-jsdoc-rules": "^0.1.3",
+    "tslint-no-circular-imports": "^0.6.1",
+    "tslint-no-unused-expression-chai": "^0.1.4",
+    "tslint-react": "^3.6.0",
+    "typescript": "3.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "lint": "./node_modules/.bin/tslint --project tsconfig.json --config tslint.json",
     "eject": "react-scripts eject",
-    "ci": "npm run test"
+    "ci": "npm run lint && CI=true npm run test -- --coverage"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "parserOptions": {
+      "sourceType": "module",
+      "ecmaFeatures": {
+        "experimentalObjectRestSpread": true,
+        "jsx": true
+      }
+    },
+    "globals": {
+      "expect": true,
+      "window": true
+    },
+    "env": {
+      "browser": true
+    },
+    "plugins": [
+      "react"
+    ],
+    "extends": [
+      "react-app",
+      "airbnb-base",
+      "plugin:react/recommended"
+    ],
+    "rules": {
+      "jsx-a11y/href-no-hash": 0,
+      "import/extensions": [
+        "error",
+        "always",
+        {
+          "js": "never"
+        }
+      ],
+      "import/prefer-default-export": "off",
+      "no-debugger": 2,
+      "no-console": 2,
+      "no-trailing-spaces": "error",
+      "no-param-reassign": [
+        2,
+        {
+          "props": false
+        }
+      ],
+      "no-else-return": [
+        "error",
+        {
+          "allowElseIf": true
+        }
+      ],
+      "quotes": [
+        "error",
+        "single"
+      ],
+      "semi": [
+        "error",
+        "always"
+      ],
+      "indent": [
+        "error",
+        4,
+        {
+          "MemberExpression": 0,
+          "SwitchCase": 1
+        }
+      ],
+      "no-multiple-empty-lines": [
+        "error",
+        {
+          "max": 1,
+          "maxBOF": 1
+        }
+      ],
+      "react/jsx-uses-react": "error",
+      "react/jsx-uses-vars": "error",
+      "valid-jsdoc": "off",
+      "class-methods-use-this": 0,
+      "linebreak-style": [
+        "error",
+        "unix"
+      ],
+      "max-len": [
+        "error",
+        {
+          "code": 120
+        }
+      ],
+      "space-infix-ops": "error",
+      "arrow-body-style": "off",
+      "require-jsdoc": [
+        "error",
+        {
+          "require": {
+            "FunctionDeclaration": true,
+            "MethodDefinition": true,
+            "ClassDeclaration": true,
+            "ArrowFunctionExpression": true,
+            "FunctionExpression": true
+          }
+        }
+      ],
+      "prefer-destructuring": [
+        "error",
+        {
+          "VariableDeclarator": {
+            "array": false,
+            "object": false
+          },
+          "AssignmentExpression": {
+            "array": false,
+            "object": false
+          }
+        },
+        {
+          "enforceForRenamedProperties": false
+        }
+      ]
+    }
   },
   "browserslist": [
     ">0.2%",
