--- a/nginx/sites-enabled/demo-frontend.test.conf
+++ b/nginx/sites-enabled/demo-frontend.test.conf
@@ -1,11 +1,11 @@
-upstream tag-api {
-  server tag-api:3000;
+upstream demo-frontend {
+  server demo-frontend:3000;
 }
 
 server {
   listen 0.0.0.0:80;
   # listen 0.0.0.0:443 ssl http2;
-  server_name tag-api.test api.tag-network.test;
+  server_name demo-frontend.test tag-network.test;
   server_tokens off;
 
   ## Strong SSL Security
@@ -18,7 +18,7 @@ server {
   error_log   /var/log/nginx/cip-app.error.log;
 
   location / {
-    proxy_pass http://tag-api/;
+    proxy_pass http://demo-frontend/;
       proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection 'upgrade';
