--- a/tag-api/.env.example
+++ b/tag-api/.env.example
@@ -1,20 +1,20 @@
 HOST=0.0.0.0
-PORT=3333
+PORT=3000
 NODE_ENV=development
 
-APP_NAME=BlogApi
+APP_NAME=TagNetwork
 APP_URL=http://${HOST}:${PORT}
 
 CACHE_VIEWS=false
 
 APP_KEY=
 
-DB_CONNECTION=mysql
-DB_HOST=mariadb
-DB_PORT=3306
-DB_USER=blog
+DB_CONNECTION=mongodb
+DB_HOST=mongodb
+DB_PORT=27017
+DB_USER=admin
 DB_PASSWORD=secret
-DB_DATABASE=blog
+DB_DATABASE=tag-network
 
 LOG_LEVEL=debug
 
