--- a/tag-api/package.json
+++ b/tag-api/package.json
@@ -27,7 +27,8 @@
         "@adonisjs/framework": "^5.0.9",
         "@adonisjs/ignitor": "^2.0.8",
         "@adonisjs/lucid": "^6.1.3",
-        "@adonisjs/vow": "^1.0.17"
+        "@adonisjs/vow": "^1.0.17",
+        "lucid-mongo": "^3.1.5"
     },
     "devDependencies": {
         "adonisjs-types": "^1.3.4",
