--- a/tag-api/.env.example
+++ b/tag-api/.env.example
@@ -14,7 +14,7 @@ DB_HOST=mongodb
 DB_PORT=27017
 DB_USER=admin
 DB_PASSWORD=secret
-DB_DATABASE=tag-network
+DB_DATABASE=tag_network
 
 LOG_LEVEL=debug
 
