--- a/tag-api/package.json
+++ b/tag-api/package.json
@@ -28,6 +28,7 @@
         "@adonisjs/ignitor": "^2.0.8",
         "@adonisjs/lucid": "^6.1.3",
         "@adonisjs/vow": "^1.0.17",
+        "lodash": "^4.17.11",
         "lucid-mongo": "^3.1.5"
     },
     "devDependencies": {
