--- a/tag-api/package.json
+++ b/tag-api/package.json
@@ -27,6 +27,7 @@
         "@adonisjs/framework": "^5.0.9",
         "@adonisjs/ignitor": "^2.0.8",
         "@adonisjs/lucid": "^6.1.3",
+        "@adonisjs/validator": "^5.0.6",
         "@adonisjs/vow": "^1.0.17",
         "lodash": "^4.17.11",
         "lucid-mongo": "^3.1.5"
