Tags: Added cache for the tag network

--- a/tag-api/.env.example
+++ b/tag-api/.env.example
@@ -16,6 +16,11 @@ DB_USER=admin
 DB_PASSWORD=secret
 DB_DATABASE=tag_network
 
+REDIS_CONNECTION=local
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=
+
 LOG_LEVEL=debug
 
 HASH_DRIVER=bcrypt
