--- a/tag-api/package.json
+++ b/tag-api/package.json
@@ -27,8 +27,11 @@
         "@adonisjs/framework": "^5.0.9",
         "@adonisjs/ignitor": "^2.0.8",
         "@adonisjs/lucid": "^6.1.3",
+        "@adonisjs/redis": "^2.0.7",
         "@adonisjs/validator": "^5.0.6",
         "@adonisjs/vow": "^1.0.17",
+        "bmax-utils": "^0.1.7",
+        "brain.js": "^1.6.1",
         "lodash": "^4.17.11",
         "lucid-mongo": "^3.1.5"
     },
